# puppet-ec2api

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.md  bindep.txt  metadata.json  setup.cfg
examples/: init.pp
manifests/: api.pp  cache.pp  config.pp  db.pp  deps.pp  init.pp  logging.pp  metadata.pp  params.pp  policy.pp  s3.pp
manifests/db/: mysql.pp  postgresql.pp  sync.pp
manifests/keystone/: auth.pp  authtoken.pp
releasenotes/notes/: add_watch_log_file-option-b9cf5ab9cc46bd21.yaml  api_paste_ini-separator-64712897b0b9f878.yaml  cache-opts-53453c838655d1cd.yaml  deprecate-api-use_tpool-06fa6b31799ddfa9.yaml  dont-include-logging-init-573d719cf7c02956.yaml  keystone-authtoken-interface-ea4c6ce7e8bf7842.yaml  keystone-authtoken-service_type-ee646367f3a4d9b5.yaml  keystone_default_domain-db4c0623d909bfc3.yaml  memcache_pool_flush_on_reconnect-9e7fbd71f951deaa.yaml  oslo_policy-enforce_scope-34b9b8673911953d.yaml  policy-enforce_new_defaults-45a0a649e3169556.yaml  policy_default_rule-f461d05743ac14b3.yaml  remove-database_min_pool_size-71222fd59d7e8eec.yaml  remove-use_tpool-4c85eaab8e200a65.yaml  ssl_insecure-3ca69378b99ae5c8.yaml  ssl_insecure-removal-77b86cbefef2b8bc.yaml  system_scope-keystone-520226f2e9f62573.yaml
releasenotes/source/: conf.py  index.rst
spec/acceptance/: 10_basic_ec2api_spec.rb  99_ec2api_config_spec.rb  basic_ec2api_spec.rb
spec/classes/: ec2api_api_spec.rb  ec2api_cache_spec.rb  ec2api_config_spec.rb  ec2api_db_mysql_spec.rb  ec2api_db_postgresql_spec.rb  ec2api_db_spec.rb  ec2api_db_sync_spec.rb  (+7 more)
tests/: init.pp
(+10 files in other folders)
