[metadata]
name = puppet-ec2api
summary = Puppet module for OpenStack Ec2api
description-file =
    README.md
author = Puppet Labs and OpenStack Contributors
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Developers
    Intended Audience :: Sytem Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
